--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <section id="history" class="history-section">
 
             <!-- Background image -->
-            <img src="img/volly.jpg" alt="Lapangan voli Universitas Ma'soem dengan pemain berlatih" class="history-bg" loading="lazy">
+            <img src="img/bg-sejarah.jpg" alt="Lapangan voli Universitas Ma'soem dengan pemain berlatih" class="history-bg" loading="lazy">
             <div class="history-container">
                 <div class="history-image">
                     <img src="img/player.png" alt="Pemain Voli">
@@ -49,7 +49,7 @@
             <div class="values-container">
                 <article class="value-card">
                     <div class="card-image">
-                        <img src="img/volly.jpg" alt="Pemain Voli - Visi">
+                        <img src="img/bg-visi.jpg" alt="Pemain Voli - Visi">
                     </div>
                     <div class="card-body">
                         <h3>Visi</h3>
