--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
             <a href="about.html" class="nav-item">About</a>
             <a href="admin.html" class="nav-item">Admin</a>
             <a href="member.php" class="nav-item">Members</a>
-            <a href="#" class="nav-contact">Contact</a>
+            <a href="contact.html" class="nav-contact">Contact</a>
         </div>
     </div>
 
@@ -34,7 +34,7 @@
     <label>Nama Lengkap</label>
     <input type="text" name="nama" placeholder="Masukkan nama" required>
 
-        <label>NIM</label>
+    <label>NIM</label>
     <input type="text" name="nim" placeholder="Masukkan NIM" required>
 
     <label>Program Studi</label>
